# intent-guard

./: .nojekyll-readme  CHANGELOG.md  CONTRIBUTING.md  FORK.md  LICENSE  README.md  SECURITY.md  SPEC.md  _config.yml  index.md  intentguard.md  playground.md
attester/: .gitignore  BUILD.md  README.md  SPEC.md  THREAT_MODEL.md
attester/firmware/: Cargo.toml
attester/firmware/.cargo/: config.toml
attester/firmware/src/: crypto.rs  main.rs  protocol.rs  render.rs  store.rs  transport.rs  ui.rs
clients/: signer-cli.ts
contracts/: BeaconUpgradeAdapter.sol  BoundedParameterAdapter.sol  CrossChainPeerAdapter.sol  DAOTreasuryAdapter.sol  EmergencyShutdownAdapter.sol  MerkleRootSetAdapter.sol  MultiCallAdapter.sol  OracleSourceAdapter.sol  OwnershipTransferAdapter.sol  PausableAdapter.sol  ProxyAdminAdapter.sol  README.md  RoleGrantAdapter.sol  SignerSetUpdateAdapter.sol  TimelockControllerAdminAdapter.sol  UUPSUpgradeAdapter.sol  WithdrawalQueueAdapter.sol
docs/: ADAPTERS.md  FAQ.md  HOWTO.md  MIGRATION.md  THREAT_VECTORS.md
script/: DeployUUPSExample.s.sol
test/: BeaconUpgradeAdapter.t.sol  BoundedParameterAdapter.t.sol  CrossChainPeerAdapter.t.sol  DAOTreasuryAdapter.t.sol  EmergencyShutdownAdapter.t.sol  IntegrationBeacon.t.sol  IntegrationBoundedParameter.t.sol  IntegrationCrossChainPeer.t.sol  IntegrationDAOTreasury.t.sol  IntegrationMerkleRoot.t.sol  IntegrationOracle.t.sol  IntegrationOwnership.t.sol  IntegrationPausable.t.sol  IntegrationProxyAdmin.t.sol  IntegrationRoleGrant.t.sol  IntegrationTimelock.t.sol  IntegrationUUPS.t.sol  IntentGuardModuleAdversarial.t.sol  MerkleRootSetAdapter.t.sol  MultiCallAdapter.t.sol  OracleSourceAdapter.t.sol  OwnershipTransferAdapter.t.sol  PausableAdapter.t.sol  (+6 more)
(+30 files in other folders)
