[package]
name = "intentguard-attester-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reference firmware for the intentguard attester. ESP32-S3 target. Unaudited."

[[bin]]
name = "attester"
path = "src/main.rs"

[features]
default = ["target-esp32s3"]
target-esp32s3 = []
target-rp2040 = []
# Tier 0 / dev: builds for host so the renderer + crypto layer can be tested
# without flashing real hardware.
target-host-emulator = []

[dependencies]
# Core no_std crypto. Constant-time, audited, widely deployed.
ed25519-dalek = { version = "2.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Wire-format CBOR (subset matching host/src/protocol.ts).
minicbor = { version = "0.24", default-features = false, features = ["alloc"] }

# Embedded display + button drivers, only pulled in for ESP32-S3 builds.
embedded-graphics = { version = "0.8", optional = true }
heapless = "0.8"

# RNG abstraction; ESP32-S3 build uses esp-hal's HRNG. Host emulator uses getrandom.
rand_core = { version = "0.6", default-features = false }

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-hal = { version = "0.20", features = ["esp32s3"] }
esp-backtrace = { version = "0.14", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.11", features = ["esp32s3"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

[profile.dev]
opt-level = "s"
debug = true
